<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.AddUpdateRecipes">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"/>
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="0dp"
                android:layout_height="@dimen/_200sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="#D8D8D8"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_addImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:padding="@dimen/_20sdp"
                    android:src="@drawable/ic_add_a_photo"/>
            </FrameLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/lbl_title"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frame_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_15sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/lbl_type"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_15sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/lbl_category"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_15sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_ingredients"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/lbl_ingredients"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_category">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:gravity="top"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_15sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_cookingTime"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/lbl_cookingTime"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_ingredients">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cookingTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_15sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_directionToCook"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="Direction To Cook"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_cookingTime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_direction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_15sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addUpdateDish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_directionToCook"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/lbl_addDish"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.core.widget.NestedScrollView>
    

</androidx.constraintlayout.widget.ConstraintLayout>